vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_string_interpolation.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_string_interpolation.vv:2:2: error: expression evaluated but not used
    1 | fn main() {
    2 |     '$($embed_file(@FILE))'
      |     ~~~~~~~~~~~~~~~~~~~~~~~
    3 | }
